[tool.poetry]
name = "coin-market-bot"
version = "0.1.0"
description = ""
authors = ["ieromi <mishaieroklis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiogram = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
